AX: link won't return linked element if URL contains # https://bugs.webkit.org/show_bug.cgi?id=40192

WebCore:

Reviewed by Darin Adler.

Test: platform/mac/accessibility/internal-link-when-document-has-fragment.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::internalLinkElement):

WebKitTools:

Reviewed by Darin Adler.

* DumpRenderTree/AccessibilityUIElement.cpp:
(linkedUIElementAtIndexCallback):
(AccessibilityUIElement::getJSClass):
* DumpRenderTree/AccessibilityUIElement.h:
* DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
(AccessibilityUIElement::linkedUIElementAtIndex):
* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::linkedUIElementAtIndex):
* DumpRenderTree/win/AccessibilityUIElementWin.cpp:
(AccessibilityUIElement::linkedUIElementAtIndex):

LayoutTests:

Reviewed by Darin Alder.

* platform/mac/accessibility/internal-link-when-document-has-fragment-expected.txt: Added.
* platform/mac/accessibility/internal-link-when-document-has-fragment.html: Added.



Canonical link: https://commits.webkit.org/52116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61103 268f45cc-cd09-0410-ab3c-d52691b4dbfc